fix: fixed interface `z-index` bug

--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@
   position: absolute;
   top: 1rem;
   right: 1rem;
-  z-index: 100;
+  z-index: 10;
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
@@ -246,7 +246,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 20;
+  z-index: 100;
   backdrop-filter: blur(2px);
 }
 
@@ -258,7 +258,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 25;
+  z-index: 110;
   backdrop-filter: blur(5px);
   animation: fadeIn 0.2s ease-in;
 }
